<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fundomenu"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="?actionBarSize" >
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/logo_shortlets" />
            
           <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/empresa_texto"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="14sp"/>


            <TextView
                android:id="@+id/bunch_of_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobre_texto"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#333845" />
           <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/siteoficial"
                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="14sp"
              
                />
              <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.11"
                android:src="@drawable/licenca" />
        </LinearLayout>

    </ScrollView>
</FrameLayout>
